# ArtScope

./: .gitignore  Config.xcconfig  gitignore
ArtScope/: Info.plist
ArtScope.xcodeproj/: project.pbxproj
ArtScope/App/: AppDelegate.swift  SceneDelegate.swift
ArtScope/Assets/Images/: AppImages.swift
ArtScope/Core/DesignSystem/: Colors.swift  FontExtension.swift  Icons.swift
ArtScope/Core/Extensions/: ViewControllerExtension.swift
ArtScope/Core/Navigation/: MenuBarView.swift  MenuItem.swift
ArtScope/Core/Networking/: RemoteImageLoader.swift
ArtScope/Data/Factories/: ProfileHistoryFactory.swift  QuizPromptFactory.swift  QuizServiceFactory.swift
ArtScope/Models/: ArtistDetailsContent.swift  ArtistPreview.swift  Quiz.swift
ArtScope/Navigation/: MenuBarControllable.swift  MenuController.swift
ArtScope/Networking/: NetworkError.swift
ArtScope/Utility/: GeminiConfiguration.swift  StudiedArtworkStore.swift
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260413_000001_create_quiz_tables.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: quizzes.py
backend/app/clients/: wikidata_client.py
backend/app/core/: config.py
backend/app/models/: quiz.py
backend/app/repositories/: quiz_repository.py
backend/app/schemas/: quiz.py
backend/app/scripts/: seed_dev_data.py
backend/app/services/: artist_quiz_generation_service.py  quiz_service.py
backend/artscope_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+215 files in other folders)
