[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artscope-backend"
version = "0.1.0"
description = "Backend API for ArtScope quizzes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.1.0,<4.0.0",
    "alembic>=1.13.0,<2.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]
